--- a/wxcomponents/vant/picker-column/index.wxs
+++ b/wxcomponents/vant/picker-column/index.wxs
@@ -24,7 +24,7 @@ function wrapperStyle(data) {
 
   return style({
     transition: 'transform ' + data.duration + 'ms',
-    'line-height': addUnit(data.itemHeight),
+    'line-height': addUnit(data.itemHeight) + 'px',
     transform: 'translate3d(0, ' + offset + ', 0)',
   });
 }
